--- a/.env.development
+++ b/.env.development
@@ -1,13 +1,13 @@
 VITE_PUBLIC_PATH = './'
 
 # 是否使用mock
-VITE_USE_MOCK=true
+VITE_USE_MOCK=false
 
 # 服务代理，可配置
 # 注意：不能换行
 # 测试：https://edu-health-test-v3.qdsgvision.com/api
-# 本地: http://192.168.60.123:6001 已同步2.0老账号
-VITE_PROXY=[["/basic-api","https://edu-health-test-v3.qdsgvision.com/api"],["/upload","http://192.168.60.123:6001"]]
+# qyj: http://120.26.241.127
+VITE_PROXY=[["/basic-api","http://192.168.0.78:8900"],["/upload","http://192.168.60.123:6001"]]
 
 # 网关地址
 VITE_API_URL=/basic-api
