--- a/.env.development
+++ b/.env.development
@@ -7,7 +7,7 @@ VITE_USE_MOCK=false
 # 注意：不能换行
 # 测试：https://edu-health-test-v3.qdsgvision.com/api
 # qyj: http://120.26.241.127
-VITE_PROXY=[["/basic-api","http://192.168.0.78:8900"],["/upload","http://192.168.60.123:6001"]]
+VITE_PROXY=[["/basic-api","http://192.168.0.78:8900/api"],["/upload","http://192.168.60.123:6001"]]
 
 # 网关地址
 VITE_API_URL=/basic-api
